fixes #61 more news items wrapping under bullet

--- a/app/assets/stylesheets/main.css.scss
+++ b/app/assets/stylesheets/main.css.scss
@@ -323,8 +323,8 @@ h6.more-news-title {
 				padding:10px 0 0 0;
 			}
 			ul {
-			    margin: 0;
-				list-style: none inside url("more-headlines-li.png");
+			    margin: 0 0 0 14px;
+				list-style: none url("more-headlines-li.png");
 				li {
 					margin:5px 0 0 0;
 					a {
